--- a/manual/voice_002ddefs.html
+++ b/manual/voice_002ddefs.html
@@ -84,14 +84,13 @@
   <p>Along each dimension, a setting of 5 is mapped to the default
   setting for the voice as implemented by a given engine. Values on
   either side of 5 produce opposing effects. This module defines
-  the following effects, which can be conceptualized as
-  opposites.</p>
+  the following effects, which can be conceptualized as pairs.</p>
   <ol type="A" start="1">
     <li>bolden , lighten</li>
     <li>animate, monotone</li>
     <li>brighten, smoothen</li>
   </ol>
-  <p>In addition, we define <code>bold-and-animate</code> as an
+  <p>In addition, we define <code>bolden-and-animate</code> as an
   auditory analog of <code>bold-italic</code>. The two additional
   voices <code>indent</code> and <code>annotate</code> predate the
   above and are retained as two <em>softer</em> voices. Finally,
