--- a/manual/voice_002ddefs.html
+++ b/manual/voice_002ddefs.html
@@ -216,9 +216,9 @@
   </dl>
   <dl>
     <dt id="index-User-Option-138">Variable: <strong>User
-    Option</strong> <em>voice-monotone-light-settings</em></dt>
+    Option</strong> <em>voice-monotone-extra-settings</em></dt>
     <dd>
-      <p>Settings for voice-monotone-light</p>
+      <p>Settings for voice-monotone-extra</p>
     </dd>
   </dl>
   <dl>
@@ -230,55 +230,48 @@
   </dl>
   <dl>
     <dt id="index-User-Option-140">Variable: <strong>User
-    Option</strong> <em>voice-monotone-settings</em></dt>
-    <dd>
-      <p>Settings for voice-monotone</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-141">Variable: <strong>User
     Option</strong> <em>voice-overlay-0-settings</em></dt>
     <dd>
       <p>Settings for voice-overlay-0</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-142">Variable: <strong>User
+    <dt id="index-User-Option-141">Variable: <strong>User
     Option</strong> <em>voice-overlay-1-settings</em></dt>
     <dd>
       <p>Settings for voice-overlay-1</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-143">Variable: <strong>User
+    <dt id="index-User-Option-142">Variable: <strong>User
     Option</strong> <em>voice-overlay-2-settings</em></dt>
     <dd>
       <p>Settings for voice-overlay-2</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-144">Variable: <strong>User
+    <dt id="index-User-Option-143">Variable: <strong>User
     Option</strong> <em>voice-overlay-3-settings</em></dt>
     <dd>
       <p>Settings for voice-overlay-3</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-145">Variable: <strong>User
+    <dt id="index-User-Option-144">Variable: <strong>User
     Option</strong> <em>voice-smoothen-extra-settings</em></dt>
     <dd>
       <p>Settings for voice-smoothen-extra</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-146">Variable: <strong>User
+    <dt id="index-User-Option-145">Variable: <strong>User
     Option</strong> <em>voice-smoothen-medium-settings</em></dt>
     <dd>
       <p>Settings for voice-smoothen-medium</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-147">Variable: <strong>User
+    <dt id="index-User-Option-146">Variable: <strong>User
     Option</strong> <em>voice-smoothen-settings</em></dt>
     <dd>
       <p>Settings for voice-smoothen</p>
