--- a/manual/emacspeak_002dcrossword.html
+++ b/manual/emacspeak_002dcrossword.html
@@ -66,6 +66,8 @@
   <hr />
   <span id="emacspeak_002dcrossword-1"></span>
   <h3 class="section">12.40 emacspeak-crossword</h3>
-  <p>CROSSWORD == Solve crosswords in Emacs</p>
+  <p>CROSSWORD == Solve crosswords in Emacs Use fork at
+  https://github.com/ieure/emacs-crossword Rather than the one on
+  melpa.</p>
 </body>
 </html>
