--- a/manual/sox_002dgen.html
+++ b/manual/sox_002dgen.html
@@ -197,8 +197,8 @@ Parameter ‘theme’ specifies variant.
     <dd>
       <span id="index-sox_002drelax-1"></span>
       <div class="format">
-        <pre class="format">Play relax set of  binaural beats.
-Param ‘length’ specifies total duration.
+        <pre class=
+        "format">Play relax set of  binaural beats for ‘length’ seconds.
 
 (fn LENGTH)
 </pre>
@@ -212,8 +212,8 @@ Param ‘length’ specifies total duration.
     <dd>
       <span id="index-sox_002drev_002dup-1"></span>
       <div class="format">
-        <pre class="format">Play rev-up set of  binaural beats.
-Param ‘length’ specifies total duration.
+        <pre class=
+        "format">Play rev-up set of  binaural beats for ‘length’ seconds. 
 
 (fn LENGTH)
 </pre>
@@ -278,8 +278,8 @@ gain ‘gain’.
     <dd>
       <span id="index-sox_002dturn_002ddown-1"></span>
       <div class="format">
-        <pre class="format">Play turn-down set of  binaural beats.
-Param ‘length’ specifies total duration.
+        <pre class=
+        "format">Play turn-down set of  binaural beats for ‘length’ seconds. 
 
 (fn LENGTH)
 </pre>
@@ -293,8 +293,8 @@ Param ‘length’ specifies total duration.
     <dd>
       <span id="index-sox_002dwind_002ddown-1"></span>
       <div class="format">
-        <pre class="format">Play wind-down set of  binaural beats.
-Param ‘length’ specifies total duration.
+        <pre class=
+        "format">Play wind-down set of  binaural beats for ‘length’ seconds.
 
 (fn LENGTH)
 </pre>
