--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1645,13 +1645,20 @@ M-l             emacspeak-m-player-load-playlist
   <h4 class="subsection">12.114.3 emacspeak-m-player Options</h4>
   <dl>
     <dt id="index-User-Option-53">Variable: <strong>User
+    Option</strong> <em>emacspeak-m-player-custom-filters</em></dt>
+    <dd>
+      <p>Additional filters to apply to streams.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-54">Variable: <strong>User
     Option</strong> <em>emacspeak-m-player-program</em></dt>
     <dd>
       <p>Media player program.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-54">Variable: <strong>User
+    <dt id="index-User-Option-55">Variable: <strong>User
     Option</strong> <em>emacspeak-media-location-bindings</em></dt>
     <dd>
       <p>Map keys to launch MPlayer on a directory.</p>
