--- a/manual/emacspeak_002dbookshare.html
+++ b/manual/emacspeak_002dbookshare.html
@@ -197,6 +197,7 @@ Optional interactive prefix arg prompts for a category to use as a filter.
       <div class="format">
         <pre class="format">Do nothing and return nil.
 This function accepts any number of ARGUMENTS, but ignores them.
+Also see ‘always’.
 
 (fn &amp;rest ARGUMENTS)
 </pre>
@@ -845,6 +846,7 @@ Make sure it’s downloaded and unpacked first.
       <div class="format">
         <pre class="format">Do nothing and return nil.
 This function accepts any number of ARGUMENTS, but ignores them.
+Also see ‘always’.
 
 (fn &amp;rest ARGUMENTS)
 </pre>
