--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -928,6 +928,7 @@ DEL             emacspeak-m-player-reset-speed
 
 M-,             emacspeak-m-player-set-clip-start
 M-.             emacspeak-m-player-set-clip-end
+M-e             emacspeak-m-player-toggle-extrastereo
 M-l             emacspeak-m-player-load-playlist
 
 In addition to any hooks its parent mode ‘comint-mode’ might have
@@ -1369,8 +1370,27 @@ Interactive prefix arg toggles automatic cueing of ICY info updates.
 </pre>
       </div>
     </dd>
+  </dl><span id=
+  "emacspeak_002dm_002dplayer_002dtoggle_002dextrastereo"></span>
+  <h4 class="subsubsection">12.114.2.69
+  emacspeak-m-player-toggle-extrastereo</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dm_002dplayer_002dtoggle_002dextrastereo">
+    Command:
+    <strong>emacspeak-m-player-toggle-extrastereo</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dm_002dplayer_002dtoggle_002dextrastereo-1">
+      </span>
+      <div class="format">
+        <pre class=
+        "format">Toggle application of extrastereo filter to all streams.
+</pre>
+      </div>
+    </dd>
   </dl><span id="emacspeak_002dm_002dplayer_002durl"></span>
-  <h4 class="subsubsection">12.114.2.69 emacspeak-m-player-url</h4>
+  <h4 class="subsubsection">12.114.2.70 emacspeak-m-player-url</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002durl">Command:
     <strong>emacspeak-m-player-url</strong> <em>(url &amp;optional
@@ -1392,7 +1412,7 @@ Interactive prefix arg toggles automatic cueing of ICY info updates.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dusing_002dhrtf"></span>
-  <h4 class="subsubsection">12.114.2.70
+  <h4 class="subsubsection">12.114.2.71
   emacspeak-m-player-using-hrtf</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dusing_002dhrtf">
@@ -1414,7 +1434,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dusing_002dopenal"></span>
-  <h4 class="subsubsection">12.114.2.71
+  <h4 class="subsubsection">12.114.2.72
   emacspeak-m-player-using-openal</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dusing_002dopenal">
@@ -1437,7 +1457,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002dchange"></span>
-  <h4 class="subsubsection">12.114.2.72
+  <h4 class="subsubsection">12.114.2.73
   emacspeak-m-player-volume-change</h4>
   <dl>
     <dt id=
@@ -1456,7 +1476,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002ddown"></span>
-  <h4 class="subsubsection">12.114.2.73
+  <h4 class="subsubsection">12.114.2.74
   emacspeak-m-player-volume-down</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dvolume_002ddown">
@@ -1471,7 +1491,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002dset"></span>
-  <h4 class="subsubsection">12.114.2.74
+  <h4 class="subsubsection">12.114.2.75
   emacspeak-m-player-volume-set</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dvolume_002dset">
@@ -1489,7 +1509,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dvolume_002dup"></span>
-  <h4 class="subsubsection">12.114.2.75
+  <h4 class="subsubsection">12.114.2.76
   emacspeak-m-player-volume-up</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dvolume_002dup">
@@ -1504,7 +1524,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dwrite_002dclip"></span>
-  <h4 class="subsubsection">12.114.2.76
+  <h4 class="subsubsection">12.114.2.77
   emacspeak-m-player-write-clip</h4>
   <dl>
     <dt id="index-emacspeak_002dm_002dplayer_002dwrite_002dclip">
@@ -1520,7 +1540,7 @@ This will work if the soundcard is set to 48000.
     </dd>
   </dl><span id=
   "emacspeak_002dm_002dplayer_002dyoutube_002dplayer"></span>
-  <h4 class="subsubsection">12.114.2.77
+  <h4 class="subsubsection">12.114.2.78
   emacspeak-m-player-youtube-player</h4>
   <dl>
     <dt id=
@@ -1546,7 +1566,7 @@ Optional prefix arg ‘best’ chooses highest.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmultimedia"></span>
-  <h4 class="subsubsection">12.114.2.78 emacspeak-multimedia</h4>
+  <h4 class="subsubsection">12.114.2.79 emacspeak-multimedia</h4>
   <dl>
     <dt id="index-emacspeak_002dmultimedia">Command:
     <strong>emacspeak-multimedia</strong></dt>
@@ -1635,6 +1655,7 @@ DEL             emacspeak-m-player-reset-speed
 
 M-,             emacspeak-m-player-set-clip-start
 M-.             emacspeak-m-player-set-clip-end
+M-e             emacspeak-m-player-toggle-extrastereo
 M-l             emacspeak-m-player-load-playlist
 
 .
