--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -338,6 +338,7 @@ The heads for the associated hydra are:
 "a":    ‘(call-interactively #’abbrev-mode)’,
 "d":    ‘(call-interactively #’toggle-debug-on-error)’,
 "f":    ‘(call-interactively #’auto-fill-mode)’,
+"e":    ‘(call-interactively #’emacspeak-m-player-toggle-extrastereo)’,
 "g":    ‘(call-interactively #’toggle-debug-on-quit)’,
 "h":    ‘(setq hydra-is-helpful (not hydra-is-helpful))’,
 "i":    ‘(call-interactively #’ido-everywhere)’,
