--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on February 19,
+  Desktop</strong> and was last updated on February 26,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -5550,10 +5550,18 @@
                   12.114.2.68
                   emacspeak-m-player-stream-info</a></li>
                   <li><a id=
+                  "toc-emacspeak_002dm_002dplayer_002dtoggle_002dextrastereo"
+                  href=
+                  "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dtoggle_002dextrastereo"
+                  name=
+                  "toc-emacspeak_002dm_002dplayer_002dtoggle_002dextrastereo">
+                  12.114.2.69
+                  emacspeak-m-player-toggle-extrastereo</a></li>
+                  <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002durl" href=
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002durl"
                   name=
-                  "toc-emacspeak_002dm_002dplayer_002durl">12.114.2.69
+                  "toc-emacspeak_002dm_002dplayer_002durl">12.114.2.70
                   emacspeak-m-player-url</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dusing_002dhrtf"
@@ -5561,7 +5569,7 @@
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dusing_002dhrtf"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dusing_002dhrtf">
-                  12.114.2.70
+                  12.114.2.71
                   emacspeak-m-player-using-hrtf</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dusing_002dopenal"
@@ -5569,7 +5577,7 @@
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dusing_002dopenal"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dusing_002dopenal">
-                  12.114.2.71
+                  12.114.2.72
                   emacspeak-m-player-using-openal</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002dchange"
@@ -5577,7 +5585,7 @@
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dvolume_002dchange"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002dchange">
-                  12.114.2.72
+                  12.114.2.73
                   emacspeak-m-player-volume-change</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002ddown"
@@ -5585,7 +5593,7 @@
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dvolume_002ddown"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002ddown">
-                  12.114.2.73
+                  12.114.2.74
                   emacspeak-m-player-volume-down</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002dset"
@@ -5593,7 +5601,7 @@
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dvolume_002dset"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002dset">
-                  12.114.2.74
+                  12.114.2.75
                   emacspeak-m-player-volume-set</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002dup"
@@ -5601,14 +5609,14 @@
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dvolume_002dup"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dvolume_002dup">
-                  12.114.2.75 emacspeak-m-player-volume-up</a></li>
+                  12.114.2.76 emacspeak-m-player-volume-up</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dwrite_002dclip"
                   href=
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dwrite_002dclip"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dwrite_002dclip">
-                  12.114.2.76
+                  12.114.2.77
                   emacspeak-m-player-write-clip</a></li>
                   <li><a id=
                   "toc-emacspeak_002dm_002dplayer_002dyoutube_002dplayer"
@@ -5616,11 +5624,11 @@
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dm_002dplayer_002dyoutube_002dplayer"
                   name=
                   "toc-emacspeak_002dm_002dplayer_002dyoutube_002dplayer">
-                  12.114.2.77
+                  12.114.2.78
                   emacspeak-m-player-youtube-player</a></li>
                   <li><a id="toc-emacspeak_002dmultimedia" href=
                   "emacspeak_002dm_002dplayer.html#emacspeak_002dmultimedia"
-                  name="toc-emacspeak_002dmultimedia">12.114.2.78
+                  name="toc-emacspeak_002dmultimedia">12.114.2.79
                   emacspeak-multimedia</a></li>
                 </ul>
               </li>
