--- a/manual/emacspeak_002dbookshare.html
+++ b/manual/emacspeak_002dbookshare.html
@@ -645,7 +645,8 @@ i               emacspeak-bookshare-action
 j               next-line
 k               previous-line
 l .. m          emacspeak-bookshare-action
-p               emacspeak-bookshare-action
+n               emacspeak-bookshare-next-result
+p               emacspeak-bookshare-previous-result
 q               bury-buffer
 s .. t          emacspeak-bookshare-action
 v               emacspeak-bookshare-view
