--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1252,13 +1252,17 @@ Time offset can be specified as a number of seconds, or as HH:MM:SS.
   <dl>
     <dt id=
     "index-emacspeak_002dm_002dplayer_002dset_002dclip_002dend">
-    Command: <strong>emacspeak-m-player-set-clip-end</strong></dt>
+    Command: <strong>emacspeak-m-player-set-clip-end</strong>
+    <em>(&amp;optional prompt)</em></dt>
     <dd>
       <span id=
       "index-emacspeak_002dm_002dplayer_002dset_002dclip_002dend-1">
       </span>
       <div class="format">
         <pre class="format">Set end of clip marker.
+ Optional interactive prefix arg prompts for the timestamp.
+
+(fn &amp;optional PROMPT)
 </pre>
       </div>
     </dd>
@@ -1269,14 +1273,17 @@ Time offset can be specified as a number of seconds, or as HH:MM:SS.
   <dl>
     <dt id=
     "index-emacspeak_002dm_002dplayer_002dset_002dclip_002dstart">
-    Command:
-    <strong>emacspeak-m-player-set-clip-start</strong></dt>
+    Command: <strong>emacspeak-m-player-set-clip-start</strong>
+    <em>(&amp;optional prompt)</em></dt>
     <dd>
       <span id=
       "index-emacspeak_002dm_002dplayer_002dset_002dclip_002dstart-1">
       </span>
       <div class="format">
         <pre class="format">Set start of clip marker.
+Interactive prefix arg prompts for the timestamp.
+
+(fn &amp;optional PROMPT)
 </pre>
       </div>
     </dd>
