--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1653,20 +1653,27 @@ M-l             emacspeak-m-player-load-playlist
   <h4 class="subsection">12.115.3 emacspeak-m-player Options</h4>
   <dl>
     <dt id="index-User-Option-53">Variable: <strong>User
+    Option</strong> <em>emacspeak-m-player-clips</em></dt>
+    <dd>
+      <p>Directory where we store clips.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-54">Variable: <strong>User
     Option</strong> <em>emacspeak-m-player-custom-filters</em></dt>
     <dd>
       <p>Additional filters to apply to streams.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-54">Variable: <strong>User
+    <dt id="index-User-Option-55">Variable: <strong>User
     Option</strong> <em>emacspeak-m-player-program</em></dt>
     <dd>
       <p>Media player program.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-55">Variable: <strong>User
+    <dt id="index-User-Option-56">Variable: <strong>User
     Option</strong> <em>emacspeak-media-location-bindings</em></dt>
     <dd>
       <p>Map keys to launch MPlayer on a directory.</p>
