--- a/manual/soundscape.html
+++ b/manual/soundscape.html
@@ -160,7 +160,7 @@ Optional interactive prefix arg restarts the listener.
   <dl>
     <dt id="index-soundscape_002drestart">Command:
     <strong>soundscape-restart</strong> <em>(&amp;optional
-    device)</em></dt>
+    prompt)</em></dt>
     <dd>
       <dl compact="compact">
         <dt><kbd>C-. r</kbd></dt>
@@ -172,10 +172,10 @@ Optional interactive prefix arg restarts the listener.
       </dl><span id="index-soundscape_002drestart-1"></span>
       <div class="format">
         <pre class="format">Restart Soundscape  environment.
-With prefix arg ‘device’, prompt for a alsa/ladspa device.
-This is then saved to soundscape-device for future use.
+With prefix arg ‘prompt’, prompt for a alsa/ladspa device and volume.
+The  is then saved to soundscape-device for future use.
 
-(fn &amp;optional DEVICE)
+(fn &amp;optional PROMPT)
 </pre>
       </div>
     </dd>
