--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -528,6 +528,7 @@ are available are cued by an auditory icon on the header line.
       <div class="format">
         <pre class="format">Move forward to the next dd.
 Optional interactive prefix arg speaks the dd.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dd is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -543,6 +544,7 @@ The dd is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next dl.
 Optional interactive prefix arg speaks the dl.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dl is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -558,6 +560,7 @@ The dl is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next dt.
 Optional interactive prefix arg speaks the dt.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dt is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -630,6 +633,7 @@ Prompts if content at point is enclosed by multiple elements.
       <div class="format">
         <pre class="format">Move forward to the next h.
 Optional interactive prefix arg speaks the h.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -645,6 +649,7 @@ The h is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next h1.
 Optional interactive prefix arg speaks the h1.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h1 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -660,6 +665,7 @@ The h1 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next h2.
 Optional interactive prefix arg speaks the h2.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h2 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -675,6 +681,7 @@ The h2 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next h3.
 Optional interactive prefix arg speaks the h3.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h3 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -690,6 +697,7 @@ The h3 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next h4.
 Optional interactive prefix arg speaks the h4.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h4 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -705,6 +713,7 @@ The h4 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next h5.
 Optional interactive prefix arg speaks the h5.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h5 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -720,6 +729,7 @@ The h5 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next h6.
 Optional interactive prefix arg speaks the h6.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h6 is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -735,6 +745,7 @@ The h6 is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next li.
 Optional interactive prefix arg speaks the li.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The li is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -750,6 +761,7 @@ The li is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next ol.
 Optional interactive prefix arg speaks the ol.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The ol is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -765,6 +777,7 @@ The ol is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next p.
 Optional interactive prefix arg speaks the p.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The p is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -782,6 +795,7 @@ The p is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next table.
 Optional interactive prefix arg speaks the table.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The table is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -797,6 +811,7 @@ The table is automatically spoken if there is no user activity.
       <div class="format">
         <pre class="format">Move forward to the next ul.
 Optional interactive prefix arg speaks the ul.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The ul is automatically spoken if there is no user activity.
 </pre>
       </div>
@@ -1477,6 +1492,15 @@ With interactive prefix arg, move to the start of the table.
   <h4 class="subsection">12.74.7 emacspeak-eww Options</h4>
   <dl>
     <dt id="index-User-Option-32">Variable: <strong>User
+    Option</strong> <em>emacspeak-eww-autospeak</em></dt>
+    <dd>
+      <p>Turn this on to make section navigation autospeak. This
+      also reverses the meaning of the prefix-arg to section nav
+      commands.</p>
+    </dd>
+  </dl>
+  <dl>
+    <dt id="index-User-Option-33">Variable: <strong>User
     Option</strong> <em>emacspeak-eww-inhibit-images</em></dt>
     <dd>
       <p>Turn this on to avoid rendering images.</p>
